--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Tip Calculator</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="calculator-container">
-        <div class="title">
-            <h1>Tip Calculator</h1>
+      <div class="title">
+        <h1>Tip Calculator</h1>
+      </div>
+      <form class="data-for-calculator">
+        <label for="amountBill">Amount $</label>
+        <input
+          id="amountBill"
+          type="number"
+          name="bill-amount"
+          placeholder="Amount of bill"
+        />
+        <label for="percentageTip">Tip %</label>
+        <input
+          id="percentageTip"
+          type="number"
+          name="tip-percentage"
+          placeholder="Percentage to tip"
+        />
+        <label for="peopleNumber">People #</label>
+        <input
+          id="peopleNumber"
+          type="number"
+          name="people-number"
+          placeholder="Number of people"
+        />
+      </form>
+      <div class="button-flex">
+        <input
+          onclick="reset()"
+          type="button"
+          id="reset-button"
+          value="Reset"
+        />
+        <input
+          onclick="calculateTip()"
+          type="button"
+          id="calculate-button"
+          value="Calculate"
+        />
+      </div>
+      <div class="calculate-result">
+        <div class="result">
+          <p>Tip amount:</p>
+          <p id="tipAmount"></p>
         </div>
-        <form class="data-for-calculator">
-            <input id="amountBill" type="number" name="bill-amount" placeholder="Amount of bill">
-            <input id="percentageTip" type="number" name="tip-percentage" placeholder="Percentage to tip">
-            <input id="peopleNumber" type="number" name="people-number" placeholder="Number of people">
-        </form>
-        <div class="button-flex">
-            <input type="button" id="reset-button" value="Reset">
-            <input onclick="calculateTip()" type="button" id="calculate-button" value="Calculate">
+        <div class="result">
+          <p>Total to pay:</p>
+          <p id="totalPay"></p>
         </div>
-        <div class="calculate-result">
-            <div class="result">
-                <p>Tip amount:</p>
-                <p id="tipAmount"></p>
-            </div>
-            <div class="result">
-                <p>Total to pay:</p>
-                <p id="totalPay"></p>
-            </div>
-            <div class="result">
-                <p>Total per person:</p>
-                <p id="perPerson"></p>
-            </div>
+        <div class="result">
+          <p>Total per person:</p>
+          <p id="perPerson"></p>
         </div>
-
+      </div>
     </div>
 
     <script src="index.js"></script>
-
-</body>
+  </body>
 </html>
