Finished tip calculation.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="calculate-result">
             <div class="result">
-                <p>Tip amount:</p>
+                <p>Tips:</p>
                 <p id="tipAmount"></p>
             </div>
             <div class="result">
