--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="title">
             <h1>Tip Calculator</h1>
         </div>
-        <form class="data-for-calculator">
+        <form class="data-for-calculator">  <!--calculator-->
             <input id="amountBill" type="number" name="bill-amount" placeholder="Amount of bill">
             <input id="percentageTip" type="number" name="tip-percentage" placeholder="Percentage to tip">
             <input id="peopleNumber" type="number" name="people-number" placeholder="Number of people">
